--- a/sassAPI.scss
+++ b/sassAPI.scss
@@ -14,4 +14,23 @@ form{
 
 #displayPrice{
     padding: $padding10;
+    position: absolute;
+    top: 50%;
+}
+
+body{
+    background-image: url("img/IFI-Immobilier-1.jpg");
+    background-attachment: fixed;
+    background-size: 100%;
+    width: 100%;
+    height: 100%;
+    min-height: 600px;
+    background-repeat: no-repeat;
+}
+
+#blockFormulaire{
+    box-shadow: 8px 8px 12px rgb(0, 2, 3),  -8px -8px 12px rgb(0, 2, 3);
+    margin: 15px 15px;
+    position: absolute;
+    left: 5%;  
 }
