--- a/style.css
+++ b/style.css
@@ -12,6 +12,25 @@ form {
 
 #displayPrice {
   padding: 10px;
+  position: absolute;
+  top: 50%;
+}
+
+body {
+  background-image: url("img/IFI-Immobilier-1.jpg");
+  background-attachment: fixed;
+  background-size: 100%;
+  width: 100%;
+  height: 100%;
+  min-height: 600px;
+  background-repeat: no-repeat;
+}
+
+#blockFormulaire {
+  box-shadow: 8px 8px 12px #000203, -8px -8px 12px #000203;
+  margin: 15px 15px;
+  position: absolute;
+  left: 5%;
 }
 
 /*# sourceMappingURL=style.css.map */
