--- a/sassAPI.scss
+++ b/sassAPI.scss
@@ -2,6 +2,7 @@ $padding10 : 10px;
 
 h1{
     text-align: center;
+    color : white; 
 }
 
 form{
@@ -29,7 +30,7 @@ body{
 }
 
 #blockFormulaire{
-    box-shadow: 8px 8px 12px rgb(0, 2, 3),  -8px -8px 12px rgb(0, 2, 3);
+    box-shadow: 0px 8px 12px rgba(13, 13, 0,0.3),  -8px -8px 12px rgba(13, 13, 0,0.3);
     margin: 15px 15px;
     position: absolute;
     left: 5%;  
