--- a/sassAPI.scss
+++ b/sassAPI.scss
@@ -31,7 +31,32 @@ body{
 
 #blockFormulaire{
     box-shadow: 0px 8px 12px rgba(13, 13, 0,0.3),  -8px -8px 12px rgba(13, 13, 0,0.3);
-    margin: 15px 15px;
+    padding: $padding10;
     position: absolute;
-    left: 5%;  
+    margin: 15px 15px;
+    margin-right: 2%;
+    margin-left: 2%;
+    left: 10px;
+
+    #selectHouse{
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+
+    #rooms-number{
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+
+    #postalCode{
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+}
+
+@media screen and (max-width:980px){
+    body{
+        background-image: url("img/IFI-Immobilier-1.jpg");
+    }
+
 }
