--- a/style.css
+++ b/style.css
@@ -29,9 +29,30 @@ body {
 
 #blockFormulaire {
   box-shadow: 0px 8px 12px rgba(13, 13, 0, 0.3), -8px -8px 12px rgba(13, 13, 0, 0.3);
-  margin: 15px 15px;
+  padding: 10px;
   position: absolute;
-  left: 5%;
+  margin: 15px 15px;
+  margin-right: 2%;
+  margin-left: 2%;
+  left: 10px;
+}
+#blockFormulaire #selectHouse {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+#blockFormulaire #rooms-number {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+#blockFormulaire #postalCode {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+@media screen and (max-width: 980px) {
+  body {
+    background-image: url("img/IFI-Immobilier-1.jpg");
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
